--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
       <module>cloud-zuul-gateway9527</module>
       <module>cloud-provider-sms8008</module>
     <module>cloud-gateway-gateway9527</module>
+      <module>cloud-config-center-3344</module>
+      <module>cloud-config-client-3355</module>
+      <module>cloud-config-client-3366</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
