--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
       <module>cloud-config-center-3344</module>
       <module>cloud-config-client-3355</module>
       <module>cloud-config-client-3366</module>
+      <module>cloud-stream-rabbitmq-provider8001</module>
+      <module>cloud-stream-rabbitmq-consumer8802</module>
+      <module>cloud-stream-rabbitmq-consumer8803</module>
+      <module>cloudalibaba-provider-payment9001</module>
+    <module>cloudalibaba-consumer-nacos-order83</module>
+      <module>cloudalibaba-config-nacos-client3377</module>
+      <module>cloudalibaba-sentinel-service8401</module>
+    <module>cloudalibaba-provider-payment9003</module>
+      <module>cloudalibab-consumer-nacos-order84</module>
+      <module>seata-order-service2001</module>
+      <module>seata-storage-service2002</module>
+    <module>seata-account-service2003</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
@@ -45,6 +57,13 @@
 <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
 <dependencyManagement>
   <dependencies>
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+      <version>2.1.0.RELEASE</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
     <!--spring boot 2.2.2-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
